# rom-organizer

./: .gitignore  README.md  config.yaml  populate_systems.py  pyproject.toml  query_systems.py  requirements.txt  run_api.py  run_tests.py  test_api.py
.github/workflows/: python-app.yml
app/: main.py
app/api/: main.py
app/core/: config.py  database.py
app/models/: game.py  system.py
tests/: conftest.py  test_game.py  test_root.py  test_systems.py
